--- a/templates/header.html
+++ b/templates/header.html
@@ -38,10 +38,9 @@
 
   <!-- FACEBOOK SHARE -->
   <meta property="og:url"                content="{{current.request.absolute_url}}" />
-  <meta property="og:type"               content="article" />
   <meta property="og:title"              content="{{current.meta_title}}" />
   <meta property="og:description"        content="{{current.meta_description}}" />
-  <meta property="og:image"              content="" />
+  <meta property="og:image"              content="{{current.fields.seo.image.url}}" />
 
 </head>
 
